fix: Add error serialization to invalid user_id provided for trips, and create 404 for trips#index rswag
