# swagger/v1/swagger.yaml
@@ -16,24 +16,10 @@ paths:
       - name: user_id
         in: query
         schema:
-          type: integer
+          "$ref": "#/components/schemas/all_trips"
       responses:
         '200':
           description: Successful
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  data:
-                    type: array
-                    properties:
-                      id:
-                        type: number
-                      type:
-                        type: string
-                      attributes:
-                        type: object
     post:
       summary: Creates a Trip for a User
       tags:
@@ -48,14 +34,9 @@ paths:
           content:
             application/json:
               schema:
-                "$ref": "#/components/schemas/Trip"
+                "$ref": "#/components/schemas/trip"
         '400':
           description: Validation failed
-      requestBody:
-        content:
-          application/json:
-            schema:
-              "$ref": "#/components/schemas/Trip"
   "/api/v1/trips/{id}":
     parameters:
     - name: id
@@ -81,53 +62,13 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  data:
-                    type: object
-                    properties:
-                      id:
-                        type: string
-                      type:
-                        type: string
-                      attributes:
-                        type: object
-                        properties:
-                          name:
-                            type: string
-                            example: Disneyland in Tokyo!
-                          location:
-                            type: string
-                            example: Tokyo, Japan
-                          start_date:
-                            type: string
-                            example: Wed, 24 Apr 2024 06:42:40.385053000 UTC +00:00
-                          end_date:
-                            type: string
-                            example: Mon, 24 Jun 2024 14:15:24.410940000 UTC +00:00
-                          status:
-                            type: string
-                            example: in_progress
-                          total_budget:
-                            type: integer
-                            example: 4676
-                          user_id:
-                            type: integer
-                            example: 1
-                          total_expenses:
-                            type: integer
-                            example: 200
-                          daily_itineraries:
-                            type: object
-                            properties:
-                              date:
-                                type: array
-                              activities:
-                                type: object
-                  required:
-                  - user_id
+                "$ref": "#/components/schemas/trip_show"
         '404':
           description: Couldn't find Trip with 'id'=2
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/not_found"
         '400':
           description: 'Validation failed: Invalid User ID provided'
     patch:
@@ -145,11 +86,15 @@ paths:
           description: 'Validation failed: Name can''t be blank'
         '404':
           description: Couldn't find Trip with 'id'=12
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/not_found"
       requestBody:
         content:
           application/json:
             schema:
-              "$ref": "#/components/schemas/Trip"
+              "$ref": "#/components/schemas/trip"
     delete:
       summary: Deletes a Trip for a User
       operationId: deleteTrip
@@ -162,6 +107,10 @@ paths:
           description: trip deleted
         '404':
           description: Couldn't find Trip with 'id'=12
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/not_found"
 components:
   schemas:
     not_found:
@@ -169,7 +118,18 @@ components:
       properties:
         message:
           type: string
-    Trip:
+    all_trips:
+      properties:
+        data:
+          type: array
+          properties:
+            id:
+              type: number
+            type:
+              type: string
+            attributes:
+              type: object
+    trip:
       type: object
       properties:
         data:
@@ -206,6 +166,53 @@ components:
                 total_expenses:
                   type: integer
                   example: 200
+        required:
+        - user_id
+    trip_show:
+      type: object
+      properties:
+        data:
+          type: object
+          properties:
+            id:
+              type: string
+            type:
+              type: string
+            attributes:
+              type: object
+              properties:
+                name:
+                  type: string
+                  example: Disneyland in Tokyo!
+                location:
+                  type: string
+                  example: Tokyo, Japan
+                start_date:
+                  type: string
+                  example: Wed, 24 Apr 2024 06:42:40.385053000 UTC +00:00
+                end_date:
+                  type: string
+                  example: Mon, 24 Jun 2024 14:15:24.410940000 UTC +00:00
+                status:
+                  type: string
+                  example: in_progress
+                total_budget:
+                  type: integer
+                  example: 4676
+                user_id:
+                  type: integer
+                  example: 1
+                total_expenses:
+                  type: integer
+                  example: 200
+                daily_itineraries:
+                  type: object
+                  properties:
+                    date:
+                      type: array
+                      example: '2024-06-12'
+                    activities:
+                      type: object
         required:
         - user_id
     accommodations:
